# AX

./: .env  .env.example  .gitignore  Dockerfile  README.md  cached_home.html  docker-run.sh  pyproject.toml  requirements.txt  run.py
app/: main.py
app/db/: configuration.py
app/llm/: gemini.py
app/routes/: agent.py  home.py  list_llm.py  llm.py  scalar.py
app/services/: agent.py
config/: database_config.py  logging_config.py  supabase_handler.py  uvicorn_config.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  main.tsx
ui/src/app/agent/: page.tsx
ui/src/app/llm/: page.tsx
ui/src/components/: nav-main.tsx  site-header.tsx  theme-provider.tsx
