[project]
name = "ax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "colorlog>=6.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-genai>=1.8.0",
    "markdown>=3.7",
    "pydantic-ai>=0.0.46",
    "pydantic-ai-slim[duckduckgo]>=0.0.46",
    "scalar-fastapi>=1.0.3",
    "supabase>=2.15.0",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = ["backend", "server"]
